# libhh

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.gyp  build.sh  common.gypi  libhh  libhh.c  libhh.h  libuv.txt  m  mk
cmake/modules/: FindSqlite3.cmake
database/: players.sqlite  server.sqlite
rooms/entities/: entity.h
src/: libhh.c  libhh.h
src/catalog/: catalog.c  catalog.h
src/dispatch/: dispatch.c  dispatch.h
src/items/: furniture.h
src/navigator/: navigator.c  navigator.h
src/net/: message_handler.c  message_handler.h  server.c  server.h
src/net/buffer/: buffer.c  buffer.h
src/net/composers/: catalog_composers.c  catalog_composers.h  composers.h  handshake_composers.c  handshake_composers.h  messenger_composers.c  messenger_composers.h  navigator_composers.c  navigator_composers.h  player_composers.c  player_composers.h
src/net/events/: events.h
src/net/handlers/: handshake_handler.c  handshake_handler.h
src/net/handlers/catalog/: catalog_handler.c  catalog_handler.h
src/net/handlers/messenger/: messenger_handler.c  messenger_handler.h
src/net/handlers/navigator/: navigator_handler.c  navigator_handler.h
src/net/sessions/: session.c  session.h
src/players/: auth.c  auth.h  player.c  player.h
src/rooms/: room.h  room_directory.h
src/rooms/entities/: entity.c
src/rooms/pathfinding/: pathfinder.h
src/rooms/tiles/: tile.h
src/storage/: connection.c  connection.h  storage.c  storage.h
src/storage/mysql/: player_dao.h
src/storage/sqlite/: catalog_dao.h  database.c  database.h  navigator_dao.h  player_dao.h
src/util/: dictionary.h  hashtable.h  pool.c  pool.h  pos.h
src/util/collections/: array.c  array.h  common.c  common.h  hashtable.h
